Fixed workflows page alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,6 +37,11 @@ a:hover {
   }
 }
 
+.remove-padding-l-r {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 @media (min-width: 1200px) {
   .container {
   width: 1200px;
@@ -1265,7 +1270,6 @@ h2.docs-subtitle {
 
 .categoriesList{
   margin-top: 5px;
-  padding-left: 20px;
   line-height: 30px;
 }
 .tags{
@@ -1380,12 +1384,6 @@ padding-top: 10px;
     background-color: rgb(33,150,243, 0.3) !important;
 }
 
-.categoriesList{
-  margin-top: 5px;
-  padding-left: 40px;
-  line-height: 30px;
-  padding-right: 40px;
-}
 
 .tags{
   line-height: 30px;
